--- a/WebdriverTest/test-output/old/Default suite/methods-alphabetical.html
+++ b/WebdriverTest/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bbe1b6">  <td>21/05/30 18:40:25</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:example.NewTest@32d2fa64]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@963522361</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>21/05/30 18:38:22</td>   <td>-122627</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:example.NewTest@32d2fa64]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@963522361</td>   <td></td> </tr>
-<tr bgcolor="bbe1b6">  <td>21/05/30 18:38:25</td>   <td>-119582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.testEasy()[pri:0, instance:example.NewTest@32d2fa64]">testEasy</td> 
-  <td>main@963522361</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>21/05/30 19:27:01</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:example.NewTest@587d1d39]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>21/05/30 19:26:33</td>   <td>-28065</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:example.NewTest@587d1d39]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@415186196</td>   <td></td> </tr>
+<tr bgcolor="846679">  <td>21/05/30 19:26:36</td>   <td>-25496</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.testEasy()[pri:0, instance:example.NewTest@587d1d39]">testEasy</td> 
+  <td>main@415186196</td>   <td></td> </tr>
 </table>
